# project1_Shchepilov_Ivan_M25-555

./: .gitignore  Makefile  README.md  demo.cast  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
