[tool.poetry]
name = "project1-shchepilov-ivan-m25-555"
version = "0.1.0"
description = "Консольная текстовая игра Лабиринт сокровищ"
authors = ["sh1v <sh1vvv@yandex.ru>"]
readme = "README.md"

packages = [
    { include = "labyrinth_game" },
]

[tool.poetry.dependencies]
python = ">=3.10"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.poetry.group.dev.dependencies]
ruff = ">=0.14.4,<0.15.0"
